Removed the bug of overflowing

--- a/css/home.scss
+++ b/css/home.scss
@@ -103,8 +103,8 @@ body{
 
 	.input-group{
 		width: 40vw;
-margin-top: 5vh;
-margin-left: 4vh;
+		margin-top: 5vh;
+		margin-left: 4vh;
 		* {
 			-webkit-border-radius: 0 !important;
 			-moz-border-radius: 0 !important;
@@ -113,21 +113,21 @@ margin-left: 4vh;
 	}
 
 	.dropdown-menu > li{
-font-family: $secondary-font;
-font-size: 13px;
+		font-family: $secondary-font;
+		font-size: 13px;
 	}
 
-input:focus {
-						border: none;
-					}
+	input:focus {
+		border: none;
+	}
 
-span > button{
-	background-color: $color_orange_approx;
-	color: #fff;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-}
+	span > button{
+		background-color: $color_orange_approx;
+		color: #fff;
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		box-shadow: none;
+	}
 
 	i{
 		padding-left: 1vh;
@@ -303,7 +303,7 @@ span > button{
 }
 
 
-/* featured-books */
+/* FEATURED BOOKS */
 
 #featured-books{
 	min-height: 110vh;
@@ -346,27 +346,30 @@ span > button{
 			}
 			.description{
 				background-color: #F6F6F6;
-				padding: 2vh;
+				padding: 1vh;
 				h4,h3,p{
 					font-family: $secondary-font;
 				}
 				h4{
+					font-size: 2vh;
 					color: #C0C0C0;
 					margin-top: 0;
 				}
 				h3{
+					font-size: 3vh;
 					color: #777777;
 					font-weight: bold;
 				}
 				h4.cost{
+					font-size: 2vh;
 					display: inline;
 					color: #FAA525;
 					font-weight: bold;
 				}
 				i{
-					font-size: 1em;
+					font-size: 2vh;
 					float: right;
-					padding-right: 2vh;
+					padding-right: 1vh;
 					display: inline;
 					color: #777777;
 				}
@@ -745,12 +748,18 @@ span > button{
 /* FEATURED AUTHOR */
 #featured-author{
 	min-height : 85vh;
-	img{
-		margin-top: 10vh;
-		height: 65vh;
-		border: 10px solid #ffffff;
-		padding: 0px;
-		box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+
+	.author-image{
+		text-align: center;
+		img{
+			margin-top: 10vh;
+			height: 400px;
+			width: 280px;
+			text-align: center;
+			border: 10px solid #ffffff;
+			padding: 0px;
+			box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+		}
 	}
 
 	.author-info{
